--- a/src/views/pages/people/_new-rakesh.njk
+++ b/src/views/pages/people/_new-rakesh.njk
@@ -41,7 +41,7 @@
     <section class="mb-5">
       <h2 class="rakesh-header">Dr. Rakesh Kaundal</h2>
       <h5 class="workplace-header"><a href="https://psc.usu.edu/" class="kbl-link">Department of Plants, Soils and Climate</a></h5>
-      <p class="workplace-desc"> &nbsp;&nbsp;&nbsp;&nbsp; Assistant Professor, Bioinformatics</p>
+      <p class="workplace-desc"> &nbsp;&nbsp;&nbsp;&nbsp; Associate Professor, Bioinformatics</p>
 
       <h5 class="workplace-header">
         <a href="https://biosystems.usu.edu/" class="kbl-link">Center for Integrated BioSystems</a>
@@ -51,7 +51,7 @@
 
       <h5 class="workplace-header"><a href="https://cs.usu.edu/" class="kbl-link">Department of Computer Science</a></h5>
       <h6 class="workplace-header">(College of Science)</h6>
-      <p class="workplace-desc"> &nbsp;&nbsp;&nbsp;&nbsp; Adjunct Assistant Professor</p>
+      <p class="workplace-desc"> &nbsp;&nbsp;&nbsp;&nbsp; Adjunct Associate Professor</p>
     </section>
 
     <section class="mt-5">
