--- a/src/views/pages/people/rakesh/rakesh.njk
+++ b/src/views/pages/people/rakesh/rakesh.njk
@@ -69,7 +69,7 @@
 
         <div class="kbl-grey-card my-3">
           <div class="kbl-text soft appt-date">Jul 2017 - Present</div>
-          <h5 class="kbl-heading">Assistant Professor, Bioinformatics</h5>
+          <h5 class="kbl-heading">Associate Professor, Bioinformatics</h5>
           <div class="kbl-text appt-desc">Utah State University (USU), Logan, Utah, USA</div>
         </div>
 
@@ -81,7 +81,7 @@
 
         <div class="kbl-grey-card my-3">
           <div class="kbl-text soft appt-date">Jul 2017 - Present</div>
-          <h5 class="kbl-heading">Adjunct Assistant Professor, Computer Science</h5>
+          <h5 class="kbl-heading">Adjunct Associate Professor, Computer Science</h5>
           <div class="kbl-text appt-desc">Utah State University (USU), Logan, Utah, USA</div>
         </div>
 
