--- a/src/views/pages/people/rakesh/backup.njk
+++ b/src/views/pages/people/rakesh/backup.njk
@@ -35,14 +35,14 @@
           <div class="col-sm-8">
                   <article class="profile-glimps">
                           <h2 class="entry-title title-foc-md">Dr. Rakesh Kaundal</h2>
-                          <p class="text-foc-md" style="line-height: 1.1;">Assistant Professor, Bioinformatics</p>
+                          <p class="text-foc-md" style="line-height: 1.1;">Associate Professor, Bioinformatics</p>
                           <p class="text-foc-md" style="line-height: 1.1;"><a class="bio" target="_blank" href="https://psc.usu.edu/">Department of Plants, Soils, and Climate <i style="color: #D30015; font-size: 12px;" class="fa fa-external-link"></i></a></p>
                           <p></p>
                           <p class="text-foc-md" style="line-height: 1;">Director, Bioinformatics Facility</p>
                           <p class="text-foc-md" style="line-height: 1;"><a class="bio" target="_blank" href="https://biosystems.usu.edu/">Center for Integrated BioSystems <i style="color: #D30015; font-size: 12px;" class="fa fa-external-link"></i></a></p>
                           <p class="text-foc-md" style="line-height: 1;">College of Agriculture and Applied Sciences</p>
                           <p></p>
-                          <p class="text-foc-md" style="line-height: 1;">Adjunct Assistant Professor</p>
+                          <p class="text-foc-md" style="line-height: 1;">Adjunct Associate Professor</p>
                           <p class="text-foc-md" style="line-height: 1;"><a class="bio" target="_blank" href="https://cs.usu.edu/">Department of Computer Science <i style="color: #D30015; font-size: 12px;" class="fa fa-external-link"></i></a></p>
                           <p class="text-foc-md" style="line-height: 1;">College of Science</p><br>
                           <div class="stage-content-biog">
@@ -114,7 +114,7 @@
                               <li class="zoom">
                                   <span class="year">Jul 2017 - present</span>
                                   <div class="appoint-meta">
-                                      <h5 class="meta-title">Assistant Professor, Bioinformatics</h5>
+                                      <h5 class="meta-title">Associate Professor, Bioinformatics</h5>
                                       <div class="meta-span">Utah State University (USU), Logan, Utah, USA</div>
                                   </div>
                               </li>
@@ -128,7 +128,7 @@
                               <li class="zoom">
                                   <span class="year">Jul 2017 - present</span>
                                   <div class="appoint-meta">
-                                      <h5 class="meta-title">Adjunct Assistant Professor, Computer Science</h5>
+                                      <h5 class="meta-title">Adjunct Associate Professor, Computer Science</h5>
                                       <div class="meta-span">Utah State University (USU), Logan, Utah, USA</div>
                                   </div>
                               </li>
