--- a/src/views/pages/people/people-data.njk
+++ b/src/views/pages/people/people-data.njk
@@ -59,7 +59,7 @@
       engineering from Harbin Institute of Technology, China, in 2011, and M.S. degree in signal and
       information processing from Harbin Engineering University, China, in 2014. His research interests
       include computer vision, ML, and their applications in intelligent transportation systems and smart agricultural systems.",
-    email: "kg.zhang@aggiemail.usu.edu",
+    email: "kg.zhang@usu.edu",
     img: "/image/raw/bioinfo/profile/Kaige Zhang.jpg",
     social: []
   }
@@ -71,7 +71,7 @@
     modifier: "Cristian",
     type: "Graduate",
     bio: "Cristian is a Plant Science MS student from Colombia. After completing his BS (Computer Science: Universidad del Valle; Cali, Colombia), he worked as a Research Assistant at CIAT(CGIAR) and the Colombian Sugarcane Research Center before joining the Kaundal Bioinformatics Laboratory. After his graduation, he plans to go back to Colombia to join his family, then pursue a Ph.D. to become a professor.",
-    email: "cdloaiza@aggiemail.usu.edu",
+    email: "cdloaiza@usu.edu",
     img: "/image/raw/bioinfo/profile/loaiza orduz-cristian.jpg?h=600&w=500",
     social: []
   }
@@ -101,7 +101,7 @@
     modifier: "Suyash",
     type: "Alumni",
     bio: "",
-    email: "suyash.mhetre@aggiemail.usu.edu",
+    email: "suyash.mhetre@usu.edu",
     img: "/image/raw/bioinfo/profile/suyash.jpg",
     social: []
   }
@@ -113,7 +113,7 @@
     modifier: "Nikhil",
     type: "Graduate",
     bio: "Nikhil is a Computer Science graduate student at USU. His bachelor's degree is in Information Technology from Osmania University, India. His research focus is in Bioinformatics. He is currently working on deep learning, developing prediction models for subcellular localization in human and arabidopsis genome and creating an SSR prediction database. He is also actively studying algorithms and event-driven programming.",
-    email: "nikhil.sai.kurivella@aggiemail.usu.edu",
+    email: "nikhil.sai.kurivella@usu.edu",
     img: "/image/raw/bioinfo/profile/nikhil.jpg",
     social: []
   }
@@ -139,7 +139,9 @@
     bio: "Matthew is the systems administrator of the high performance cluster for the bioinformatics group. A passionate Linux enthusiast, his work includes bioinformatics programming and teaching Linux to new users. Matthew is starting an MS in Computer Science this spring and hopes to add a Master's in statistics to his plan of study.",
     email: "matthew.lister@usu.edu",
     img: "/image/raw/bioinfo/profile/mat.jfif",
-    social: []
+    social: [
+    {type: 'github', link: 'https://github.com/chaosreader/'}
+    ]
   }
 %}
 
@@ -148,10 +150,12 @@
     subtitle: "HPC Administrator | Technology Systems",
     modifier: "Austin",
     type: "Alumni",
-    bio: "Matthew is the systems administrator of the high performance cluster for the bioinformatics group. A passionate Linux enthusiast, his work includes bioinformatics programming and teaching Linux to new users. Matthew is starting an MS in Computer Science this spring and hopes to add a Master's in statistics to his plan of study.",
-    email: "matthew.lister@usu.edu",
-    img: "/image/raw/bioinfo/profile/austins.jpg",
-    social: []
+    bio: "Austin is a systems administrator of the high performance cluster for the bioinformatics group. He enjoys anything IT especially Linux. Here to assist with any technology needs at the lab. He recently graduated at USU with a BS in Technology Systems and works full-time at the Space Dynamics Laboratory.",
+    email: "austin.swainston@usu.edu",
+    img: "/image/raw/bioinfo/profile/austins.jpg?h=600&w=500",
+    social: [
+    {type: 'github', link: 'https://github.com/austinswainston/'}
+    ]
   }
 %}
 
