--- a/src/views/pages/news/data.njk
+++ b/src/views/pages/news/data.njk
@@ -1,3 +1,11 @@
+{% set hpipy = {
+    title: "HPIpy: A Host-Pathogen Protein-Protein Interactions Prediction Tool.",
+    date: "November 20, 2024",
+    desc: "HPIpy leverages computational algorithms to predict accurate and reliable interactions between host and pathogen proteins.",
+    img: "https://bioinfocore.usu.edu/raikou/image/bioinfo/tools/hpipy.png",
+    link: "/hpipy/"
+} %}
+
 {% set naveenDefends = {
     title: "Naveen Duhan Successfully Defends His PhD Dissertation",
     img: "http://bioinfocore.usu.edu/raikou/image/aspect/bioinfo/profile/1.jpg?a=height&w=6&h=6",
@@ -472,7 +480,7 @@ benchmark were implement in the DeepHPI webserver",
 %}
 
 {% set general = [naveenDefends, naveenReward, mitchellGoodbye, simar, mitchell, apogeeInstruments, newAdminColin,newAndrew,koltonGrant,newDavid,newKolton,citsatdb,newadmin1] %}
-{% set science = [profeatx, hucovaria, trustdb, tritikbdb, deepNEC, weconet, alfanet, malivhu, hucopia,covidtracker, pyseqrna,newdeephpi,
+{% set science = [hpipy, profeatx, hucovaria, trustdb, tritikbdb, deepNEC, weconet, alfanet, malivhu, hucopia,covidtracker, pyseqrna,newdeephpi,
 ranchSATdb, legumeSSRdb, citSATdb, PlantmSubP, GreeningDB, PredHPI, ligpred, APiNET, lacsubpred, PLpred, rslpred, rbpred, AtSubP] %}
 {% set media = [fullbrightnews, cultivate, capitolHill, boundaries, weedRevolution, heroesNight,nihFunds,saltStress,undergradGrants] %}
 {% set latest = [naveenDefends, naveenReward, cultivate] %}
