--- a/src/views/pages/news/data.njk
+++ b/src/views/pages/news/data.njk
@@ -483,4 +483,4 @@ benchmark were implement in the DeepHPI webserver",
 {% set science = [hpipy, profeatx, hucovaria, trustdb, tritikbdb, deepNEC, weconet, alfanet, malivhu, hucopia,covidtracker, pyseqrna,newdeephpi,
 ranchSATdb, legumeSSRdb, citSATdb, PlantmSubP, GreeningDB, PredHPI, ligpred, APiNET, lacsubpred, PLpred, rslpred, rbpred, AtSubP] %}
 {% set media = [fullbrightnews, cultivate, capitolHill, boundaries, weedRevolution, heroesNight,nihFunds,saltStress,undergradGrants] %}
-{% set latest = [naveenDefends, naveenReward, cultivate] %}
+{% set latest = [hpipy, naveenDefends, naveenReward] %}
