--- a/src/views/pages/people/our-team/our-team.njk
+++ b/src/views/pages/people/our-team/our-team.njk
@@ -34,7 +34,8 @@
         </div>
       {% endfor %}
     </div>
-
+    
+    {% if false %}
     <div class="row">
       <div class="col-12">
         <div class="kbl-header-bar text-center py-2">
@@ -50,6 +51,7 @@
         </div>
       {% endfor %}
     </div>
+    {% endif %}
 
     <div class="row">
       <div class="col-12">
