--- a/src/views/pages/people/people-data.njk
+++ b/src/views/pages/people/people-data.njk
@@ -164,7 +164,7 @@
     subtitle: "HPC Administrator | Undergraduate Research Assistant",
     modifier: "Caleby",
     type: "Undergradute",
-    bio: "Caleb is a Linux Administrator for the Bioinformatics group. He is pursuing a bachelor's in computer science with a minor in geology at USU. In his spare time, he enjoys working on developing video games for retro consoles. He also enjoys skiing, playing board games, and photography.",
+    bio: "Caleb is a Linux Administrator for the Bioinformatics group. He is pursuing a bachelor's in computer science with a minor in geology at USU. In his spare time, he enjoys working on developing video games for retro consoles. He also enjoys skiing, hiking, playing board games, and photography.",
     email: "caleb.young@usu.edu",
     img: "/image/raw/bioinfo/profile/caleby.jpg?h=600&w=500",
     social: [
