--- a/src/views/components/img-header.njk
+++ b/src/views/components/img-header.njk
@@ -18,20 +18,20 @@
     <div class="d-none d-md-block">
       <div class="row g-0">
         <div class="col-6">
-          <img class="kbl-header-img" src="{{ RaikouServer }}/{{img1}}"/>
+          <img class="kbl-header-img" src="{{ RaikouServer }}/{{img1}}" alt="Aerial view of Utah State University campus."/>
           <h1 class="text-center imgHeaderTitleSplit imgHeaderGen">
             {{headerTitle}}
           </h1>
         </div>
         <div class="col-6">
-          <img class="kbl-header-img" src="{{ RaikouServer }}/{{img2}}"/>
+          <img class="kbl-header-img" src="{{ RaikouServer }}/{{img2}}" alt="Kaabil Team sitting together outside the Bioinformatics Building at USU."/>
         </div>
       </div>
     </div>
     <div class="d-md-none">
       <div class="row g-0">
       <div class="col">
-        <img class="kbl-header-img" src="{{ RaikouServer }}/{{img1}}"/>
+        <img class="kbl-header-img" src="{{ RaikouServer }}/{{img1}}" alt="Aerial view of Utah State University campus."/>
               <h1 class="text-center imgHeaderTitle imgHeaderGen">
               {{headerTitle}}
               </h1>
