--- a/src/views/components/tool-card.njk
+++ b/src/views/components/tool-card.njk
@@ -3,7 +3,7 @@
     <div class="kbl-tool-card">
       <a href="{{ tool.link }}" target="_blank">
         <section class="thumb">
-          <img src="{{ RaikouServer }}{{ tool.img }}">
+          <img src="{{ RaikouServer }}{{ tool.img }}" alt="{{ tool.title }} web page.">
         </section>
         <section class="px-3 py-2 title">
           <div class="w-100">
@@ -25,7 +25,7 @@
         <article class="kbl-research-card-container tool mx-auto">
           <div class="kbl-research-card">
             <section class="img-tool">
-              <img src="{{ tool.img }}">
+              <img src="{{ tool.img }}" alt="{{ tool.title }} web page.">
             </section>
             <section class="px-3 flex-text-wrapper pt-2">
               <div class="card-title">{{ tool.title }}</div>
