--- a/src/views/pages/people/_new-rakesh.njk
+++ b/src/views/pages/people/_new-rakesh.njk
@@ -3,7 +3,7 @@
     <div class="kbl-person-card-container">
       <div class="kbl-person-card rakesh-card">
         <figure>
-          <img class="w-100 mb-2" style="height: 220px;" src="{{ RaikouServer }}/image/raw/bioinfo/profile/RK_2.jpg">
+          <img class="w-100 mb-2" style="height: 220px;" src="{{ RaikouServer }}/image/raw/bioinfo/profile/RK_2.jpg" alt="Dr. Rakesh Kaundal, Director, Bioinformatics Facility>
           <figcaption class="pb-2 px-3">
             <div clas="title-wrapper">
               <div class="contact-title mb-0 text-center"><b>Phone: </b><span class="contact-desc">+1 (435) 797-4117</span></div>
