--- a/src/views/universal/_navbar.njk
+++ b/src/views/universal/_navbar.njk
@@ -8,7 +8,7 @@
 
       <div class="col-3 ps-5">
         <a class="navbar-brand d-inline" href="/">
-          <img src="{{ RaikouServer }}/image/bioinfo/kbllogo.png">
+          <img src="{{ RaikouServer }}/image/bioinfo/kbllogo.png" alt="Kaabil Logo: Kaundal Artificial intelligence & Advanced Bioinformatics Lab.">
         </a>
       </div>
 
@@ -67,7 +67,7 @@
 
       <div class="col-3 ps-5">
         <a class="navbar-brand d-inline" href="/">
-          <img src="{{ RaikouServer }}/image/bioinfo/kbllogo.png">
+          <img src="{{ RaikouServer }}/image/bioinfo/kbllogo.png" alt="Kaabil Logo: Kaundal Artificial intelligence & Advanced Bioinformatics Lab.">
         </a>
       </div>
 
